Change to java 17