@@ -50,7 +50,7 @@ public class SolidingCategory implements DisplayCategory<SolidingRecipeDisplay> 
         widgets.add(Widgets.createTexturedWidget(TEXTURE, new Rectangle(startPoint.x, startPoint.y, 153, 83)));
 
         widgets.add(Widgets.createSlot(new Point(startPoint.x + 26, startPoint.y + 34))
-                .entries(display.getInputEntries().getFirst()).markInput());
+                .entries(display.getInputEntries().get(0)).markInput());
 
         widgets.add(Widgets.createSlot(new Point(startPoint.x + 107, startPoint.y + 34))
                 .entries(display.getOutputEntries().get(0)).markOutput());
