@@ -24,12 +24,12 @@ public record SqueezingRecipe(List<Ingredient> inputItems, List<ItemStack> outpu
         if (world.isClient){
             return false;
         }
-        return inputItems.getFirst().test(input.getStack(0));
+        return inputItems.get(0).test(input.getStack(0));
     }
 
     @Override
     public ItemStack craft(SimpleInventory inventory, DynamicRegistryManager registryManager) {
-        return output.isEmpty() ? ItemStack.EMPTY : output.getFirst().copy();
+        return output.isEmpty() ? ItemStack.EMPTY : output.get(0).copy();
     }
 
     @Override
@@ -39,7 +39,7 @@ public record SqueezingRecipe(List<Ingredient> inputItems, List<ItemStack> outpu
 
     @Override
     public ItemStack getOutput(DynamicRegistryManager registryManager) {
-        return output.isEmpty() ? ItemStack.EMPTY : output.getFirst().copy();
+        return output.isEmpty() ? ItemStack.EMPTY : output.get(0).copy();
     }
 
     @Override
